--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="header">
         <div class="h">
             <div class="logo">
-                <img src="image/logo.png" width="300px" height="250px" />
+                <img src="logo.png" width="300px" height="250px" />
             </div>
             <div class="name">
                 <span class="n">
@@ -74,7 +74,7 @@
 
             <div class="resource">
                 <h2>Images</h2>
-                <img src="image/image3.jpg" width="300px">
+                <img src="image3.jpg" width="300px">
                 <a href="gallery.html">Click to view more on site project images...</a>
             </div>
             <div style="clear: both;"></div>
