--- a/address.html
+++ b/address.html
@@ -22,6 +22,29 @@
 </head>
 
 <body>
+    <div class="header">
+        <div class="h">
+            <div class="logo">
+                <img src="logo.png" width="300px" height="250px" />
+            </div>
+            <div class="name">
+                <span class="n">
+                    <h1>Porchelvan  Builders</h1>
+                    
+                </span>
+            </div>
+        </div>
+        <div class="menu">
+            <nav>
+                <ul>
+                    <li><button class="menubutton"><a href="home.html">HOME</a></button></li>
+                    <li><button class="menubutton"><a href="#">ABOUT</a></button></li>
+                    <li><button class="menubutton"><a href="address.html">CONTACT</a></button></li>
+                    <li><button class="menubutton"><a href="service.html">SERVICE</a></button></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
     <div class="address">
         <div class="map">
             <h2>Google Map</h2>
